pay/defective new html, pay function

--- a/bike/bikeapp/templates/bikeapp/defective.html
+++ b/bike/bikeapp/templates/bikeapp/defective.html
@@ -20,16 +20,19 @@
 		<!--<img src="{% static 'img/logo.png' %} ">-->
 	</head>
 
-	<body class="bg-primary">
-		<div id="app">
+	<body style="background:#FFFFFF" >
+		<div id="app" >
 
-			<section class="section section-2">
-				<div class="container">
-					<div class="single-page single-pageimage construction-bg cover-image " data-image-src="assets/img/news/img14.jpg">
-						<div class="wrapper wrapper2">
-							<form action="dd" method="get" class="card-body" tabindex="500">
-								<h3>Report to repair</h3>
-								<div class="mail">
+			<section class="section section-2" >
+				<div class="container" >
+					<div class="single-page single-pageimage construction-bg cover-image " data-image-src="assets/img/news/img14.jpg" style="background:#87CEFA" >
+						<div class="wrapper wrapper2" >
+
+							<form action="dd" method="get" class="card-body" tabindex="500" style="background:#87CEFA">
+
+								<!--#87CEFA  3356BB-->
+								<h3> <font color="#000000">Report to repair</font></h3>
+								<div class="mail" >
 									<input type="text" name="BikeID">
 									<label>Please input Bike ID(Behind the bicycle seat)</label>
 								</div>
@@ -38,14 +41,14 @@
 									<input type="text" name="Bikeproblem">
 									<label>Describe problem:</label>
 								</div>
-								<div class="submit">
-									<input class="btn btn-primary btn-block" type="submit" name="submitr" value="Report" >
+								<div class="submit" style="background:#3356BB">
+									<input style="background:#3356BB" class="btn btn-primary btn-block" type="submit" name="submitr" value="Report" >
 								</div>
 								<p class="mb-2"><a href="../register.html" >other problem?</a></p>
 							</form>
 							{% if has_report == 1 %}
-							<p class="form"><center><font color="#FF0000">Success!</font></center>
-							<center><font color="#FF0000">We have reported the problem to the administrator!</font></center>
+							<p class="form"><center><font color="#3356BB">Success!</font></center>
+							<center><font color="#3356BB">We have reported the problem to the administrator!</font></center>
 							{% endif %}
 							{% if has_report == 0 %}
 							<p class="form"><center><font color="#FF0000">Report error！cannot find this bike!</font></center>
@@ -53,7 +56,7 @@
 						</div>
 					</div>
 					<div class="simple-footer mt-5 text-white">
-						Copyright &copy; psd tapp lab 17 ada 2021
+						Copyright &copy; psd tapp lab 1f ada 2021
 
 				</div>
 
