--- a/bike/bikeapp/templates/bikeapp/rentbike.html
+++ b/bike/bikeapp/templates/bikeapp/rentbike.html
@@ -214,7 +214,9 @@
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                                 Bike ID: Password</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">40GBP</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800"><div class="page-description">
+								{{bike_id}}: {{ bike_pin }}！！
+							</div></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
