commented staff and operator button

--- a/bike/bikeapp/templates/bikeapp/login.html
+++ b/bike/bikeapp/templates/bikeapp/login.html
@@ -64,10 +64,10 @@
 											<p class="form"><center>register first！</center>
 										{% endif %}
 
-										<div class="card-body border-top">
-											<a class="btn  btn-social btn-facebook btn-block"><i class="fa fa-S"></i> Staff</a>
-											<a class="btn  btn-social btn-google btn-block mt-2"><i class="fa fa-M"></i> Manager</a>
-										</div>
+										<!-- <div class="card-body border-top"> -->
+											<!-- <a class="btn  btn-social btn-facebook btn-block"><i class="fa fa-S"></i> Staff</a> -->
+											<!-- <a class="btn  btn-social btn-google btn-block mt-2"><i class="fa fa-M"></i> Manager</a> -->
+										<!-- </div> -->
 									</div>
 
 								</div>
