--- a/bike/bikeapp/templates/bikeapp/repairbike.html
+++ b/bike/bikeapp/templates/bikeapp/repairbike.html
@@ -17,6 +17,8 @@
         margin: 0;
         padding: 0;
       }
+      der-color: #999999;
+     }
     </style>
     <script>
           function initialize() {
@@ -144,6 +146,7 @@
           }
 
           window.onload = loadScript;
+
         </script>
   </head>
   <body>
@@ -155,6 +158,29 @@
 
 
     }
+    <!------------table style------------->
+          table.littletable {
+        font-family: verdana,arial,sans-serif;
+         font-size:11px;
+         color:#333333;
+         border-width: 1px;
+         border-color: #999999;
+         border-collapse: collapse;
+     }
+    table.littletable th {
+         background:#4B71D8;
+         border-width: 3px;
+         padding: 10px;
+         border-style: solid;
+         border-color: #999999;
+     }
+    table.littletable td {
+         background:#F5F5F5;
+         border-width: 2px;
+         padding: 8px;
+         border-style: solid;
+         border-color: #999999;
+     }
 </style>
     <script type="text/javascript">
 function toggle(id){
@@ -173,7 +199,7 @@ else tb.style.display='none';
 <button type="button" value="show/hide" onclick="toggle('table1')">show/hide</button>
 
     <form action="repair" method="POST">
-    <table border="1" width="30%" id="table1"  style="display:none;" cellpadding="0" cellspacing="0" bgcolor="#f0ffff" align="center">
+    <table class="littletable" id="table1"  style="display:none;" align="center">
         <thead>
             <tr bgcolor="#ff7f50">
                 <th>bid needs to repair</th>
