--- a/bike/bikeapp/templates/bikeapp/managermain.html
+++ b/bike/bikeapp/templates/bikeapp/managermain.html
@@ -30,21 +30,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
      <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3vT3UOTtr5GYl6yqo3wLfmaiElz66hIw&callback=initMap&libraries=&v=weekly"
-      async
-    ></script>
-    <script>
-<!--          function loadScript()-->
-<!--         {-->
-<!--           var script = document.createElement("script");-->
-<!--           script.type = "text/javascript";-->
-<!--           script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyD3vT3UOTtr5GYl6yqo3wLfmaiElz66hIw&sensor=false&callback=initialize";-->
-<!--           document.body.appendChild(script);-->
-<!--         }-->
-
-<!--          window.onload = loadScript;-->
-        </script>
+     <script>
+        function clickHandler(url) {
+            $("#frame-page").load(url,function(){
+                if(url == "/bikemap"){
+                    console.log("bikemap is this page",$("#map"))
+                    loadScript()
+                }
+            });
+            $.getScript()
+        }
+    </script>
 </head>
 
 <body id="page-top">
@@ -71,9 +67,9 @@
                 Data visualization
             </div>
 
-            <!-- bike map -->
-            <li class="nav-item" onclick="clickHandler('/bikemap')">
-                <a class="nav-link" href="javascript:void(0);">
+            <!-- bike map <li class="nav-item" onclick="clickHandler('/managermap')">-->
+            <li class="nav-item">
+                <a class="nav-link" href="/bikemap" target="_blank">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Bike map</span></a>
             </li>
@@ -147,7 +143,7 @@
                             <!--                                        <div class="col mr-2">-->
 <!--                            <iframe id="frame" src="https://www.baidu.com" width="100%" height="100%"-->
 <!--                                frameborder="0"></iframe>-->
-                            <div id="frame-page" style="height:600;"></div>
+                            <div id="frame-page" style="height:600px;background:#F0F8FF;"></div>
 
                             <!--                                        </div>-->
                             <!--                                        <div class="col-auto">-->
@@ -226,13 +222,7 @@
 <!--    <script src="js/demo/chart-area-demo.js"></script>-->
 <!--    <script src="js/demo/chart-pie-demo.js"></script>-->
 
-    <script>
-        function clickHandler(url) {
-            $("#frame-page").load(url);
-            $.getScript()
-        }
 
-    </script>
           <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3vT3UOTtr5GYl6yqo3wLfmaiElz66hIw" async defer></script>
 
 </body>
