--- a/bike/bikeapp/templates/bikeapp/operatormain.html
+++ b/bike/bikeapp/templates/bikeapp/operatormain.html
@@ -179,17 +179,17 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                   <!-- <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                         <a href="/pay" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-danger fa-sm text-white-50"></i> Pay</a>
-                    </div>
+                    </div>-->
 
                     <!-- Content Row -->
                     <div class="row">
 
                         <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
+                        <!-- <div class="col-xl-3 col-md-6 mb-4">
                             <div class="card border-left-primary shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
@@ -204,10 +204,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
+                        <!--<div class="col-xl-3 col-md-6 mb-4">
                             <div class="card border-left-success shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
@@ -222,12 +222,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
 
-                </div>
-                <!-- /.container-fluid -->
-
-            </div>
             <!-- End of Main Content -->
 
             <!-- Footer -->
