--- a/bike/bikeapp/templates/bikeapp/locationmap.html
+++ b/bike/bikeapp/templates/bikeapp/locationmap.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>track all bikes</title>
+    <title>show all bikes</title>
+      <!-----------------------add bar------------------------------->
+      {% load static %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>1F-Bike- Dashboard</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+   	<link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+	<script src =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<!------------------------------------>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <style type="text/css">
       /* Always set the map height explicitly to define the size of the div
@@ -27,10 +52,12 @@
           <!--judge bikes' status and usage-->
           var i;
           for (i=0;i<bikesinfo.length;i++){
-              if (bikesinfo[i][1] == '0'){
+              if (bikesinfo[i][1] == '2'){
               bikesinfo[i][1] ='good to use'
-              } else if(bikesinfo[i][1] == '1'){
+              } else if(bikesinfo[i][1] == '0'){
               bikesinfo[i][1] ='broke down'
+              }else if(bikesinfo[i][1] == '1'){
+              bikesinfo[i][1] ='repairing'
               }
 
               if(bikesinfo[i][4] == '0'){
@@ -129,10 +156,115 @@
           window.onload = loadScript;
         </script>
   </head>
-  <body>
+  <!-------------------------add bar------------------------>
+  <body id="page-top">
+
+    <!-- Page Wrapper -->
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+
+            <!-- Sidebar - Brand -->
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/login">
+                <div class="sidebar-brand-icon rotate-n-15">
+                    <i class="fas fa-laugh-wink"></i>
+                </div>
+                <div class="sidebar-brand-text mx-3">Welcome</sup></div>
+            </a>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item active">
+                <a class="nav-link" href="/login">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Dashboard</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
+
+
+
+
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
+
+
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/repairbike" data-toggle="collapse" data-target="#collapsePages"
+                    aria-expanded="true" aria-controls="collapsePages">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Repair Bike</span>
+                </a>
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Login Screens:</h6>
+                        <a class="collapse-item" href="login.html">Login</a>
+                        <a class="collapse-item" href="register.html">Register</a>
+                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Other Pages:</h6>
+                        <a class="collapse-item" href="404.html">404 Page</a>
+                        <a class="collapse-item" href="blank.html">Blank Page</a>
+                    </div>
+                </div>
+            </li>
+
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="/locationmap">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>View Map of Bikes</span></a>
+            </li>
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="/movebike">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Move Bikes</span></a>
+            </li>
+
+			 <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="/datavisualization">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Reports</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <!-- Sidebar Toggler (Sidebar) -->
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
+
+            <!-- Sidebar Message -->
+            <div class="sidebar-card">
+                <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt="">
+                <p class="text-center mb-2"><strong>1F- Bikes</strong> is dedicated to improve the Environment and is partnered with top NGOs</p>
+                <a class="btn btn-success btn-sm" href="https://www.greenpeace.org.uk/">Donate Now!</a>
+            </div>
+
+        </ul>
+        <!-- End of Sidebar -->
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
+            <div id="content">
     <div id="map"></div>
+            </div>
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <style type="text/css">
+    <div>
+            <style type="text/css">
     #select_move{
         position: absolute;
         top:670px;
@@ -142,6 +274,29 @@
         background:white;
         display:none
     }
+    <!------------table style------------->
+          table.littletable {
+        font-family: verdana,arial,sans-serif;
+         font-size:11px;
+         color:#333333;
+         border-width: 1px;
+         border-color: #999999;
+         border-collapse: collapse;
+     }
+    table.littletable th {
+         background:#4B71D8;
+         border-width: 3px;
+         padding: 10px;
+         border-style: solid;
+         border-color: #999999;
+     }
+    table.littletable td {
+         background:#F5F5F5;
+         border-width: 2px;
+         padding: 8px;
+         border-style: solid;
+         border-color: #999999;
+     }
 </style>
     <script type="text/javascript">
 function toggle(id){
@@ -152,11 +307,11 @@ else tb.style.display='none';
 </script>
 
 
-    <td>show bike info in table form</td>
+    <td align="center">If you want to show all messages!!!</td>
 <button type="button" value="show/hide" onclick="toggle('table1')">show/hide</button>
-    <table border="1" id="table1" style="display:none;" width="30%" cellpadding="0" cellspacing="0" bgcolor="#f0ffff" align="center">
-      <caption>All Bikes!</caption>
+    <table border="1" class="littletable" id="table1" style="display:none;" width="30%" cellpadding="0" cellspacing="0" bgcolor="#f0ffff" align="center">
         <thead>
+
             <tr bgcolor="#ff7f50">
                 <th>Bike ID</th>
                 <th>Bike status</th>
@@ -177,22 +332,43 @@ else tb.style.display='none';
         {% endfor %}
         </tbody>
 </table>
+        <!-- Footer -->
+            <footer class="sticky-footer bg-white">
+                <div class="container my-auto">
+                    <div class="copyright text-center my-auto">
+                        <span>Copyright &copy; 1F-Bikes 2021</span>
+                    </div>
+                </div>
+            </footer>
+            <!-- End of Footer -->
+        </div>
+        </div>
 
 
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3vT3UOTtr5GYl6yqo3wLfmaiElz66hIw&callback=initMap&libraries=&v=weekly"
       async
     ></script>
+  <!----------------------------bar scripts------------------------>
+  <!-- Bootstrap core JavaScript-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+
+    <!-- Custom scripts for all pages-->
+    <script src="js/sb-admin-2.min.js"></script>
+
+    <!-- Page level plugins -->
+    <script src="vendor/chart.js/Chart.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-pie-demo.js"></script>
   </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
