--- a/bike/bikeapp/templates/bikeapp/rentbike.html
+++ b/bike/bikeapp/templates/bikeapp/rentbike.html
@@ -311,13 +311,13 @@
 		// Find the distance between now an the count down date 
 		var timediff = now - countupDate.getTime(); 
 	 
-		// Time calculations for days, hours, minutes and seconds 
+		// Conversions calculations for days, hours, minutes and seconds 
 		var days = Math.floor(timediff / (1000 * 60 * 60 * 24)); 
 		var hrs = Math.floor((timediff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)); 
 		var min = Math.floor((timediff % (1000 * 60 * 60)) / (1000 * 60)); 
 		var sec = Math.floor((timediff % (1000 * 60)) / 1000); 
 	 
-		// Output the result in an element with id="demo" 
+		//display result in an element with id="timer" 
 		document.getElementById("timer").innerHTML = days + "d " + hrs + "h " + min + "m " + sec + "s "; 
 	}, 1000); 
 	</script> 
