--- a/bike/bikeapp/templates/bikeapp/rentbike.html
+++ b/bike/bikeapp/templates/bikeapp/rentbike.html
@@ -196,11 +196,12 @@
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                                   Your current Trip</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">
-												<div id="stopwatch">
+												<div id="timer">
 												  <!-- CURRENT TIME -->
 												  <div id="sw-time">00:00:00</div>												 
 												  <!-- CONTROLS -->
-												  <input type="button" value="Stop" id="sw-rst" disabled/>
+												  <input type="button" value="Stop" id="sw-rst" onclick="/return" />
+												  <input type="button" value="Start" id="sw-go" disabled/>
 												</div>
 											</div>
                                         </div>
