--- a/bike/bikeapp/templates/bikeapp/rentbike.html
+++ b/bike/bikeapp/templates/bikeapp/rentbike.html
@@ -27,6 +27,7 @@
     <!-- Custom styles for this template-->
    	<link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/stopwatch.js' %}" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
@@ -47,7 +48,6 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Welcome</sup></div>
             </a>
 
             <!-- Divider -->
@@ -177,15 +177,36 @@
             <div id="content">
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-danger fa-sm text-white-50"></i> Pay</a>
-                    </div>
+                   				
 
-                    <!-- Content Row -->
-                    <div class="row">
+                        <!-- Earnings (Monthly) Card Example -->
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card border-left-success shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+											<div class="col mr-2">
+												<div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+												You're Bike ID</div>
+												<div class="h5 mb-0 font-weight-bold text-gray-800"><div class="page-description">
+												{{bike_id}}
+												</div>
+											</div>
+											<div class="col mr-2">
+												<div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                Bike Pin </div>
+												<div class="h5 mb-0 font-weight-bold text-gray-800"><div class="page-description">
+												 {{ bike_pin }}
+												</div>
+											</div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+						<div class="row">
 
                         <!-- Earnings (Monthly) Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
@@ -194,14 +215,9 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                  Your current Trip</div>
+                                                  Have a Safe Trip!!</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">
-												<div id="stopwatch">
-												  <!-- CURRENT TIME -->
-												  <div id="sw-time">00:00:00</div>												 
-												  <!-- CONTROLS -->
-												  <input type="button" value="Stop" id="sw-rst" disabled/>
-												</div>
+												<label id="minutes">00</label>:<label id="seconds">00</label>
 											</div>
                                         </div>
                                         <div class="col-auto">
@@ -211,39 +227,22 @@
                                 </div>
                             </div>
                         </div>
-						
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Bike ID: Password</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800"><div class="page-description">
-								{{bike_id}}: {{ bike_pin }}！！
-							</div></div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                     </div>
 
-
+				
                 </div>
                 <!-- /.container-fluid -->
-			<a href="/return" class="btn btn-success btn-circle btn-lg">return bike
-                                        <i class="fas fa-check"></i>
-                                    </a>
-            </div>
+						<a href="/return" class="btn btn-success btn-sm">return bike
+                                <i class="fas fa-check"></i>
+                         </a>
+				</div>
+				<div>
+							<a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                                class="fas fa-danger fa-sm text-white-50"></i> Pay</a>
+                    </div>
             <!-- End of Main Content -->
-
+					
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
@@ -303,33 +302,30 @@
     <script src="js/demo/chart-pie-demo.js"></script>
 	<html xmlns="http://www.w3.org/1999/xhtml" >
 
-    <script type="text/javascript">
-        var check = null;
+<script type="text/javascript">
+	var minutesLabel = document.getElementById("minutes");
+	var secondsLabel = document.getElementById("seconds");
+	var totalSeconds = 0;
+	setInterval(setTime, 1000);
 
-        function printDuration() {
-            if (check == null) {
-                var cnt = 0;
+	function setTime() {
+	  ++totalSeconds;
+	  secondsLabel.innerHTML = pad(totalSeconds % 60);
+	  minutesLabel.innerHTML = pad(parseInt(totalSeconds / 60));
+	}
 
-                check = setInterval(function () {
-                    cnt += 1;
-                    document.getElementById("timer").innerHTML = cnt;
-                }, 1000);
-            }
-        }
+	function pad(val) {
+	  var valString = val + "";
+	  if (valString.length < 2) {
+		return "0" + valString;
+	  } else {
+		return valString;
+	  }
+	}
+</script>
+	
 
-        function stop() {
-            clearInterval(check);
-            check = null;
-            document.getElementById("timer").innerHTML = '0';
-        }
-    </script>
-</head>
-<body>
-<div>
-    
-</div>
-</body>
-</html>
+
 
 
 </body>
