--- a/bike/bikeapp/templates/bikeapp/locationmap.html
+++ b/bike/bikeapp/templates/bikeapp/locationmap.html
@@ -184,53 +184,26 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
-
-
-
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/repairbike" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Repair Bike</span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
-                    </div>
-                </div>
-            </li>
-
-
-            <!-- Nav Item - Tables -->
+            <!-- Track locations -->
             <li class="nav-item">
                 <a class="nav-link" href="/locationmap">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>View Map of Bikes</span></a>
+                    <span>Track Locations</span></a>
             </li>
 
-            <!-- Nav Item - Tables -->
+			 <!-- Repair bikes -->
+            <li class="nav-item">
+                <a class="nav-link" href="/repairbike">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Repair</span></a>
+            </li>
+
+            <!-- move bikes -->
             <li class="nav-item">
                 <a class="nav-link" href="/movebike">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Move Bikes</span></a>
             </li>
-
-			 
-
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -247,6 +220,98 @@
             </div>
 
         </ul>
+<!--  <body id="page-top">-->
+
+<!--    &lt;!&ndash; Page Wrapper &ndash;&gt;-->
+<!--    <div id="wrapper">-->
+
+<!--        &lt;!&ndash; Sidebar &ndash;&gt;-->
+<!--        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">-->
+
+<!--            &lt;!&ndash; Sidebar - Brand &ndash;&gt;-->
+<!--            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/login">-->
+<!--                <div class="sidebar-brand-icon rotate-n-15">-->
+<!--                    <i class="fas fa-laugh-wink"></i>-->
+<!--                </div>-->
+<!--                <div class="sidebar-brand-text mx-3">Welcome</sup></div>-->
+<!--            </a>-->
+
+<!--            &lt;!&ndash; Divider &ndash;&gt;-->
+<!--            <hr class="sidebar-divider my-0">-->
+
+<!--            &lt;!&ndash; Nav Item - Dashboard &ndash;&gt;-->
+<!--            <li class="nav-item active">-->
+<!--                <a class="nav-link" href="/login">-->
+<!--                    <i class="fas fa-fw fa-tachometer-alt"></i>-->
+<!--                    <span>Dashboard</span></a>-->
+<!--            </li>-->
+
+<!--            &lt;!&ndash; Divider &ndash;&gt;-->
+<!--            <hr class="sidebar-divider">-->
+
+
+
+
+
+<!--            &lt;!&ndash; Divider &ndash;&gt;-->
+<!--            <hr class="sidebar-divider">-->
+
+
+
+<!--            &lt;!&ndash; Nav Item - Pages Collapse Menu &ndash;&gt;-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link collapsed" href="/repairbike" data-toggle="collapse" data-target="#collapsePages"-->
+<!--                    aria-expanded="true" aria-controls="collapsePages">-->
+<!--                    <i class="fas fa-fw fa-folder"></i>-->
+<!--                    <span>Repair Bike</span>-->
+<!--                </a>-->
+<!--                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
+<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
+<!--                        <h6 class="collapse-header">Login Screens:</h6>-->
+<!--                        <a class="collapse-item" href="login.html">Login</a>-->
+<!--                        <a class="collapse-item" href="register.html">Register</a>-->
+<!--                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>-->
+<!--                        <div class="collapse-divider"></div>-->
+<!--                        <h6 class="collapse-header">Other Pages:</h6>-->
+<!--                        <a class="collapse-item" href="404.html">404 Page</a>-->
+<!--                        <a class="collapse-item" href="blank.html">Blank Page</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </li>-->
+
+
+<!--            &lt;!&ndash; Nav Item - Tables &ndash;&gt;-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="/locationmap">-->
+<!--                    <i class="fas fa-fw fa-table"></i>-->
+<!--                    <span>View Map of Bikes</span></a>-->
+<!--            </li>-->
+
+<!--            &lt;!&ndash; Nav Item - Tables &ndash;&gt;-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="/movebike">-->
+<!--                    <i class="fas fa-fw fa-table"></i>-->
+<!--                    <span>Move Bikes</span></a>-->
+<!--            </li>-->
+
+<!--			 -->
+
+<!--            &lt;!&ndash; Divider &ndash;&gt;-->
+<!--            <hr class="sidebar-divider d-none d-md-block">-->
+
+<!--            &lt;!&ndash; Sidebar Toggler (Sidebar) &ndash;&gt;-->
+<!--            <div class="text-center d-none d-md-inline">-->
+<!--                <button class="rounded-circle border-0" id="sidebarToggle"></button>-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; Sidebar Message &ndash;&gt;-->
+<!--            <div class="sidebar-card">-->
+<!--                <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt="">-->
+<!--                <p class="text-center mb-2"><strong>1F- Bikes</strong> is dedicated to improve the Environment and is partnered with top NGOs</p>-->
+<!--                <a class="btn btn-success btn-sm" href="https://www.greenpeace.org.uk/">Donate Now!</a>-->
+<!--            </div>-->
+
+<!--        </ul>-->
         <!-- End of Sidebar -->
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
