--- a/bike/bikeapp/templates/bikeapp/operatormain.html
+++ b/bike/bikeapp/templates/bikeapp/operatormain.html
@@ -27,6 +27,7 @@
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 
+  <!-------------------------add bar------------------------>
 <body id="page-top">
 
     <!-- Page Wrapper -->
@@ -55,81 +56,6 @@
 
             <!-- Divider -->
             <hr class="sidebar-divider">
-
-<!--            &lt;!&ndash; Heading &ndash;&gt;-->
-<!--            <div class="sidebar-heading">-->
-<!--                Bikes Nearby-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Nav Item - Pages Collapse Menu &ndash;&gt;-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="/rent" data-toggle="collapse" data-target="#collapseTwo"-->
-<!--                    aria-expanded="true" aria-controls="collapseTwo">-->
-<!--                    <i class="fas fa-fw fa-cog"></i>-->
-<!--                    <span>Rent</span>-->
-<!--                </a>-->
-<!--				<a class="nav-link collapsed" href="/return" data-toggle="collapse" data-target="#collapseTwo"-->
-<!--                    aria-expanded="true" aria-controls="collapseTwo">-->
-<!--                    <i class="fas fa-fw fa-cog"></i>-->
-<!--                    <span>Return</span>-->
-<!--                </a>-->
-<!--                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Custom Components:</h6>-->
-<!--                        <a class="collapse-item" href="buttons.html">Buttons</a>-->
-<!--                        <a class="collapse-item" href="cards.html">Cards</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="/defective" data-toggle="collapse" data-target="#collapseUtilities"-->
-<!--                    aria-expanded="true" aria-controls="collapseUtilities">-->
-<!--                    <i class="fas fa-fw fa-wrench"></i>-->
-<!--                    <span>Report Broken Bike</span>-->
-<!--                </a>-->
-<!--                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"-->
-<!--                    data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Custom Utilities:</h6>-->
-<!--                        <a class="collapse-item" href="utilities-color.html">Colors</a>-->
-<!--                        <a class="collapse-item" href="utilities-border.html">Borders</a>-->
-<!--                        <a class="collapse-item" href="utilities-animation.html">Animations</a>-->
-<!--                        <a class="collapse-item" href="utilities-other.html">Other</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-            <!-- Divider -->
-<!--            <hr class="sidebar-divider">-->
-
-<!--            &lt;!&ndash; Heading &ndash;&gt;-->
-<!--            <div class="sidebar-heading">-->
-<!--                Admin functions-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Nav Item - Pages Collapse Menu &ndash;&gt;-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="/repairbike" data-toggle="collapse" data-target="#collapsePages"-->
-<!--                    aria-expanded="true" aria-controls="collapsePages">-->
-<!--                    <i class="fas fa-fw fa-folder"></i>-->
-<!--                    <span>Repair Bike</span>-->
-<!--                </a>-->
-<!--                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Login Screens:</h6>-->
-<!--                        <a class="collapse-item" href="login.html">Login</a>-->
-<!--                        <a class="collapse-item" href="register.html">Register</a>-->
-<!--                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>-->
-<!--                        <div class="collapse-divider"></div>-->
-<!--                        <h6 class="collapse-header">Other Pages:</h6>-->
-<!--                        <a class="collapse-item" href="404.html">404 Page</a>-->
-<!--                        <a class="collapse-item" href="blank.html">Blank Page</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
 
             <!-- Track locations -->
             <li class="nav-item">
@@ -178,52 +104,9 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                   <!-- <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <a href="/pay" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-danger fa-sm text-white-50"></i> Pay</a>
-                    </div>-->
-
-                    <!-- Content Row -->
                     <div class="row">
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <!-- <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                  Recent Trip Duration</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">40mins</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <!--<div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Recent bill</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>-->
-
+                    </div>
+                </div>
             <!-- End of Main Content -->
 
             <!-- Footer -->
@@ -238,7 +121,6 @@
 
         </div>
         <!-- End of Content Wrapper -->
-
     </div>
     <!-- End of Page Wrapper -->
 
